# upload-recordings

./: .dockerignore  .gitignore  Dockerfile  Makefile.am  README.md  azure-uploader.cpp  azure-uploader.h  cloudwatch-client.h  configure.ac  connection-manager.h  crypto-helper.h  gcs-uploader.cpp  gcs-uploader.h  google-uploader.cpp  google-uploader.h  main.cpp  mp3-encoder.h  mysql-helper.cpp  mysql-helper.h  ops-ws.c.patch  protocol-lws.c  s3-client-manager.cpp  s3-client-manager.h  s3-compatible-uploader.cpp  s3-compatible-uploader.h  s3-uploader.cpp  s3-uploader.h  session-wrapper.cpp  session-wrapper.h  session.cpp  session.h  statsd_client.h  storage-uploader.cpp  storage-uploader.h  streaming-mp3-encoder.h  string-utils.h  thread-pool.h  upload-utils.cpp  upload-utils.h  upload_recordings.service  (+1 more)
.github/workflows/: build-deb.yml  build-rpm.yml  docker-publish.yml
debian/: changelog  control  copyright  rules
el/: upload-recordings.spec
